# elebox

./: .gitignore  .gitlint  .pre-commit-config.yaml  404.html  Cargo.toml  LICENSE-APACHE  README-zh.md  README.md  about.html  elebox.code-workspace  index.html
.github/workflows/: deploy.yaml  rust.yaml
_next/static/1vd-OHWqUQ7QCPd8m98Bk/: _buildManifest.js
_next/static/3YRA8kB3anZBdmVxirRO4/: _buildManifest.js
_next/static/4wGIP_zZmXwE0CUmkXRqL/: _buildManifest.js
_next/static/7NN-hfwu1zCM68lpPOtl5/: _buildManifest.js
_next/static/A20X_aksZGCXz3_tUCJPz/: _buildManifest.js
_next/static/AKSnmPG_-JiwRda1sF9HA/: _buildManifest.js
_next/static/AxcamOV_r4wjFUm0ddpV9/: _buildManifest.js
_next/static/HgCD6grGpY7V-f5dCUAfb/: _buildManifest.js
_next/static/K5kBp67JZrbIpingxrgTw/: _buildManifest.js
_next/static/M-1ijQCtuaJLIoi2opJfE/: _buildManifest.js
_next/static/Vy6UmjnBVpv7M63qXNjm8/: _buildManifest.js
docs/: cli.html  data-field.html  get-started.html  gui.html  next.config.js  overview.html  package.json  theme.config.tsx
docs/pages/: _app.tsx  about.mdx
docs/pages/docs/: _meta.json  (+2 more)
elebox/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
elebox-cli/: Cargo.toml
elebox-cli/src/: category_cmd.rs  main.rs  manufacturer_cmd.rs  package_cmd.rs  part_cmd.rs
elebox-core/: Cargo.toml
elebox-core/src/: backup.rs  category.rs  comm.rs  csv.rs  db.rs  default_db.rs  errors.rs  jamm_db.rs  json.rs  lib.rs  manager.rs  manufacturer.rs  package.rs  part.rs  part_type.rs  transfer.rs  yaml.rs
elebox-gui/: Cargo.toml
elebox-tauri/: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
elebox-tauri/src/: App.vue  db_cmd_category.ts  db_cmd_manufacturer.ts  db_cmd_package.ts  db_cmd_part.ts  input_rules.ts  interface.ts  main.ts  router.ts  styles.css
elebox-tauri/src-tauri/: Cargo.toml  tauri.conf.json
elebox-tauri/src-tauri/src/: config.rs  main.rs
elebox/src/: App.vue  main.rs  styles.css
elebox/src-tauri/: Cargo.toml  tauri.conf.json
src/: elebox.rs  main.rs
website/: fix-path.js  next.config.js  package.json  pnpm-lock.yaml  theme.config.tsx
website/pages/: _meta.en.json  _meta.json  index.en.mdx  index.mdx
(+256 files in other folders)
