[package]
name = "elebox-cli"
version = "0.2.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ziteh/elebox"
authors = ["ZiTe <honmonoh@gmail.com>"]
readme = "README.md"
edition = "2021"

[dependencies]
elebox-core = { path = "../elebox-core" }
clap = { version = "4.0.22", features = ["derive"] }

[profile.release]
lto = true
strip = true
