[package]
name = "elebox-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jammdb = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1.2"
uuid = { version = "1.5.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
