[package]
name = "elebox-core"
version = "0.2.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ziteh/elebox"
authors = ["ZiTe <honmonoh@gmail.com>"]
readme = "README.md"
edition = "2021"

[dependencies]
jammdb = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1.2"
uuid = { version = "1.5.0", features = ["v7", "fast-rng", "macro-diagnostics"] }
csv = "1.3.0"
serde_yaml = "0.9.34"

[profile.release]
lto = true
strip = true
