[package]
name = "elebox"
version = "1.0.0-beta.4"
license = "MIT OR Apache-2.0"
description = "Lightweight personal electronic parts inventory management tool"
repository = "https://github.com/ziteh/elebox"
authors = ["ZiTe <honmonoh@gmail.com>"]
readme = "README.md"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "protocol-asset", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
elebox-core = { path = "../../elebox-core" }
dirs = "3.0.0"
log = "0.4.21"
serde_yaml = "0.9.34"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
debug = true

[profile.release]
debug = false
